Closed Bug 1186885 Opened 9 years ago Closed 9 years ago

(v2.1s) Various B2G emulator test-seek permafails

Categories

(Core :: Audio/Video, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
FxOS-S4 (07Aug)
blocking-b2g 2.1S+
Tracking Status
b2g-v2.1S --- fixed
b2g-v2.2 --- unaffected
b2g-v2.2r --- unaffected
b2g-master --- unaffected

People

(Reporter: RyanVM, Assigned: sotaro)

References

Details

Attachments

(1 file, 1 obsolete file)

Started when bug 1118139 landed.

https://treeherder.mozilla.org/logviewer.html#?job_id=21549&repo=mozilla-b2g34_v2_1s

516 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_seek-1.html | bug516323.indexed.ogv seek test 1: seeking flag on start should be true
566 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_seek-1.html | gizmo.mp4 seek test 1: seeking flag on start should be true
578 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_seek-12.html | r11025_s16_c1.wav seek test 12: seeking flag on start should be true - got false, expected true
581 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_seek-12.html | audio.wav seek test 12: seeking flag on start should be true - got false, expected true
589 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_seek-13.html | r11025_s16_c1.wav seek test 13: seeking flag on start should be true - got false, expected true
592 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_seek-13.html | audio.wav seek test 13: seeking flag on start should be true - got false, expected true
Flags: needinfo?(sotaro.ikeda.g)
Not sure if this is related to bug 1163766 or not.
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
From the source, it seems necessary to update MediaDecoder::IsSeeking() to b2gv2.2's IsSeeking().
Update MediaDecoder::IsSeeking() like b2g v2.2.
Attachment #8640059 - Flags: review?(cpearce)
Attachment #8640059 - Attachment description: patch - Fix MediaDecoder::IsSeeking() → patch for b2g v2.1s - Fix MediaDecoder::IsSeeking()
Attachment #8640059 - Flags: review?(cpearce) → review+
Carry "r=cpearce".
Attachment #8640059 - Attachment is obsolete: true
Attachment #8640467 - Flags: review+
blocking-b2g: --- → 2.1S+
Thanks!

https://hg.mozilla.org/releases/mozilla-b2g34_v2_1s/rev/47bbc2dc7e7a
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S4 (07Aug)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: