Bug 1186885 - Fix MediaDecoder::IsSeeking(). r=cpearce, a=2.1S+